[package]
name = "pflow-metamodel"
version = "0.1.1"
edition = "2021"
description = "Declarative Petri-nets using a rust DSL"
license = "MIT"
documentation = "https://docs.rs/pflow-metamodel"
homepage = "https://pflow.dev"
repository = "https://github.com/pflow-dev/metamodel-rs"



[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.21.7"
brotli = "3.4.0"
cjson = "0.1.2"
libipld = "0.16.0"
multibase = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6.6"
