[package]
name = "pflow-metamodel"
version = "0.3.0"
edition = "2021"
description = "Declarative Petri-nets using a rust DSL"
license = "MIT"
documentation = "https://docs.rs/pflow-metamodel"
homepage = "https://pflow.dev"
repository = "https://github.com/pflow-dev/metamodel-rs"



[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
brotli = "6.0"
cjson = "0.1"
embed-doc-image = "0.1"
libipld = "0.16"
multibase = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
